# ros2_rust_tt

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  setup.sh
ros2_ws/: fake_camera.py
ros2_ws/.cargo/: config.toml
ros2_ws/src/mis_paquetes/mi_nodo/: Cargo.toml  package.xml
ros2_ws/src/mis_paquetes/mi_nodo/src/: main.rs
